--- a/style.css
+++ b/style.css
@@ -105,7 +105,6 @@ table th {
 #branding .breadcrumb {
   padding:0px;
   float:left;
-  text-transform:uppercase;
   font-weight:normal;
   }
 
